--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,17 +1,19 @@
 *{
   padding: 0;
   margin: 0;
+  top: 0;
+  bottom: 0;
   box-sizing: border-box;
 }
 html,body{
     height: 100%;
     width: 100%;
-    padding: 0;
-    margin: 0;
-    top: 0;
-    bottom: 0;
     font-family: 'Lato',sans-serif;
     font-size: 62.50%;
+}
+
+body{
+  font-size: 1.6rem;
 }
 
 /* Start nav*/
